# bird-classification-app

./: MAKE87.yml  pyproject.toml
app/: main.py
