[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
description = "Raspberry Pi bird classifier using Make87, ONNX Runtime, and Hugging Face Hub"
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
  "make87",
  "make87_messages",
  "onnxruntime>=1.22.0",
  "numpy",
  "opencv-python-headless",
  "huggingface_hub>=0.30.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["*.onnx", "labels.txt"]
